Removes Mobile Spacing Issue

--- a/styles/pages/_about.scss
+++ b/styles/pages/_about.scss
@@ -137,7 +137,7 @@
   background-repeat: no-repeat;
   padding-bottom: 370px;
 
-  background-size: 100% 940px;
+  background-size: 100% 1080px;
 
   padding-right: 33px;
 
@@ -165,7 +165,7 @@
   background-image: url("/assets/images/solutions-textbg.png");
   background-repeat: no-repeat;
 
-  background-size: 100% 600px;
+  background-size: 100% 640px;
   padding-left: 50px;
   padding-top: 60px;
   padding-right: 40px;
